# example_cxx

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  main.cpp  shell.nix
bench/: CMakeLists.txt  b63_example.cpp  example.cpp
src/: lib.cpp
test/: CMakeLists.txt  test1.cpp  test_add.cu
